--- a/longsidebar.html
+++ b/longsidebar.html
@@ -1,36 +1,40 @@
 <link rel="stylesheet" href="longsidebar.css" />
-<aside class="main-sidebar">
+<aside class="main-sidebar" id="longSidebar">
     <h2 class="main-logo">
         <img src="icon/Logo.png" id="Logo" alt="Logo">
      </h2>
     <ul>
-        <li>
+         <li class="menuitem" id="toggleLongSidebar">
+            ☰ Menu
+        </li>
+        <li class="menuitem" id="modulebar">
             <a href="Home.php" class="menu-item">
                 <img src="icon/home.png" alt="Mood Tracker">
                 Mood Tracker
             </a>
         </li>
-        <li>
+        <li class="menuitem" id="modulebar">
             <a href="StickyNote.php" class="menu-item">
                 <img src="icon/note.jpg" alt="Sticky Notes Planner">
                 Sticky Notes Planner
             </a>
         </li>
 
-        <li>
-            <a href="Task.php" class="menu-item">
+        <li class="menuitem" id="modulebar">
+            <a href="add-task.php" class="menu-item">
                 <img src="icon/task.png" alt="Sticky Notes Planner">
                 Sticky Notes Planner
             </a>
         </li>
         
-        <li>
+        <li  class="menuitem" id="modulebar">
             <a href="Community.php" class="menu-item">
                 <img src="icon/community.png" alt="Community & Peer Support">
                 Community & Peer Support
             </a>
         </li>
     </ul>
+    
     <li id="logout">
         <a href="#" class="menu-item">
             Logout
@@ -38,15 +42,10 @@
     </li>
 </aside>
 
-
-
-<main class="content">
-    </main>
-
-<style>
+  <style>
     /* Basic styling for the main content area */
     .content {
-        margin-left: 200px; /* Adjust based on main-sidebar width */
+        margin-left: 55px; /* Adjust based on main-sidebar width */
         padding: 20px;
     }
 
@@ -55,19 +54,5 @@
     }
 </style>
 
-<script>
-    document.addEventListener('DOMContentLoaded', function() {
-        const toggleBtn = document.getElementById('toggleBtn');
-        const sidebar = document.querySelector('.sidebar');
-
-        if (toggleBtn && sidebar) {
-            toggleBtn.addEventListener('click', function() {
-                sidebar.classList.toggle('hidden');
-                const content = document.querySelector('.content');
-                if (content) {
-                    content.style.marginLeft = sidebar.classList.contains('hidden') ? '200px' : '440px';
-                }
-            });
-        }
-    });
-</script>
+<main class="content">
+    </main>
