--- a/accountManagement/login.html
+++ b/accountManagement/login.html
@@ -1,57 +1,63 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>LumiMind</title>
-    <link rel="stylesheet" href="../css/account.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>LumiMind</title>
+  <link rel="stylesheet" href="../css/account.css">
 </head>
 <body>
-    <div class="container">
-        <div class="form-container">
-            <div class="logo">
-                <img src="../icon/logo.png" alt="Logo">
-                <span>LumiMind</span>
-            </div>
-            <h1>Sign up</h1>
-            <p>Welcome to 'LumiMind'</p>
-            <form  id="loginForm">
-                <input type="email" placeholder="Email" required>
-                <input type="password" placeholder="Password" required>
-                <div class="buttons">
-                    <button type="submit" class="login-btn" >Login</button>
-                    <button type="button" class="signup-btn" onclick="window.location.href='signup.html'">Sign up</button>
-                </div>
-            </form>
+  <div class="container">
+    <div class="form-container">
+      <div class="logo">
+        <img src="../icon/logo.png" alt="Logo">
+        <span>LumiMind</span>
+      </div>
+      <h1>Login</h1>
+      <p>Welcome back to 'LumiMind'</p>
+      <form id="loginForm">
+        <input type="email" id="email" name="email" placeholder="Email" required>
+        <input type="password" id="password" name="password" placeholder="Password" required>
+        <div class="buttons">
+          <button type="submit" class="login-btn">Login</button>
+          <button type="button" class="signup-btn" onclick="window.location.href='signup.html'">Sign up</button>
         </div>
-        <div class="image-container">
-            <img src="../icon/duck2.png" alt="Chick holding heart">
-            <p>Your story starts here.</p>
-        </div>
+        <p id="message" style="color: red; margin-top: 10px;"></p>
+      </form>
     </div>
-</body>
-</html>
-<script>
-document.getElementById("loginForm").addEventListener("submit", function(event) {
-    event.preventDefault();
 
-    const email = document.getElementById("email").value;
-    const password = document.getElementById("password").value;
+    <div class="image-container">
+      <img src="../icon/duck2.png" alt="Chick holding heart">
+      <p>Your story starts here.</p>
+    </div>
+  </div>
 
-    fetch("login.php", {
+  <script>
+    document.getElementById("loginForm").addEventListener("submit", function(event) {
+      event.preventDefault();
+      const email = document.getElementById("email").value;
+      const password = document.getElementById("password").value;
+
+      fetch("login.php", {
         method: "POST",
         headers: {
-            "Content-Type": "application/x-www-form-urlencoded"
+          "Content-Type": "application/x-www-form-urlencoded"
         },
         body: `email=${encodeURIComponent(email)}&password=${encodeURIComponent(password)}`
-    })
-    .then(response => response.text())
-    .then(data => {
-        if (data === "success") {
-            window.location.href = "../MoodTracker/moodsection.php";
+      })
+      .then(response => response.text())
+      .then(data => {
+        if (data.trim() === "success") {
+          window.location.href = "../MoodTracker/mood_sections.php";
         } else {
-            document.getElementById("message").textContent = data;
+          document.getElementById("message").textContent = data;
         }
+      })
+      .catch(error => {
+        document.getElementById("message").textContent = "An error occurred. Please try again.";
+        console.error(error);
+      });
     });
-});
-</script>
+  </script>
+</body>
+</html>
