--- a/sidebar/sidebar.html
+++ b/sidebar/sidebar.html
@@ -97,7 +97,7 @@
       </a>
     </li>
     <li class="nav-item has-submenu expanded">
-      <a href="javascript:void(0);" class="nav-link menu-heading">
+      <a href="../accountManagement/profile.php" class="nav-link menu-heading">
         <img src="../icon/profile.png" class="nav-icon" />
       </a>
     </li>
@@ -116,6 +116,7 @@
   const toggleLongSidebar = document.getElementById('toggleLongSidebar');
   const shortSidebar = document.getElementById('shortSidebar');
   const longSidebar = document.getElementById('longSidebar');
+
   const content = document.querySelector('.main-content');
 
   function updateContentMargin() {
