--- a/sidebar/sidebar.html
+++ b/sidebar/sidebar.html
@@ -1,5 +1,5 @@
 <link rel="stylesheet" href="../css/sidebar.css" />
-<aside class="main-sidebar" id="longSidebar">
+<aside class="main-sidebar" id="longSidebar" style="display: none;">
   <div class="logo-section">
     <img src="../icon/Logo.png" class="logo" />
     <span class="website-name">LumiMind</span>
@@ -52,7 +52,7 @@
       </a>
       <ul class="submenu" Style="Display: None">
         <li class="submenu-item">
-            <a href="../Community&Peer/community.php" class="submenu-link">Forum</a>
+            <a href="../community/community.php" class="submenu-link">Forum</a>
       </ul>
     </li>
     <li class="nav-item has-submenu expanded">
@@ -71,7 +71,7 @@
   <button id="toggleShortSidebar">≪</button>
 </aside>
 
-<aside class="main-sidebar short" id="shortSidebar" style="display: none;">
+<aside class="main-sidebar-short" id="shortSidebar">
   <div class="logo-section">
     <img src="../icon/Logo.png" class="logo" />
   </div>
@@ -92,7 +92,7 @@
       </a>
     </li>
     <li class="nav-item">
-        <a href="../Community&Peer/community.php" class="nav-link">
+        <a href="../community/community.php" class="nav-link">
         <img src="../icon/community.png" class="nav-icon" />
       </a>
     </li>
@@ -103,7 +103,7 @@
     </li>
   </ul>
   <div class="logout-section">
-    <a href="logout.html" class="logout-link">
+    <a href="../accountManagement/logout.php" class="logout-link">
       <img src="../icon/logout.png" class="nav-icon" />
     </a>
   </div>
