--- a/sidebar/sidebar.html
+++ b/sidebar/sidebar.html
@@ -1,5 +1,6 @@
+<body class="sidebarhtml">
 <link rel="stylesheet" href="../css/sidebar.css" />
-<aside class="main-sidebar" id="longSidebar" style="display: none;">
+<aside class="main-sidebar" id="longSidebar">
   <div class="logo-section">
     <img src="../icon/Logo.png" class="logo" />
     <span class="website-name">LumiMind</span>
@@ -12,7 +13,7 @@
       </a>
     </li>
      <li class="nav-item has-submenu expanded">
-      <a href="javascript:void(0);" class="nav-link menu-heading">
+      <a href="../StickyNotes/StickyNote.php" class="nav-link menu-heading">
         <img src="../icon/note.jpg" class="nav-icon" />
         <span>Sticky Notes</span>
       </a>
@@ -46,24 +47,20 @@
       </ul>
     </li>
     <li class="nav-item has-submenu expanded">
-      <a href="javascript:void(0);" class="nav-link menu-heading">
+      <a href="../Community&Peer/community.php" class="nav-link menu-heading">
         <img src="../icon/community.png" class="nav-icon" />
         <span>Community & Peer</span>
       </a>
-      <ul class="submenu" Style="Display: None">
-        <li class="submenu-item">
-            <a href="../community/community.php" class="submenu-link">Forum</a>
-      </ul>
     </li>
     <li class="nav-item has-submenu expanded">
-      <a href="javascript:void(0);" class="nav-link menu-heading">
+      <a href="../accountManagement/profile.php" class="nav-link menu-heading">
         <img src="../icon/profile.png" class="nav-icon" />
         <span>Profile</span>
       </a>
     </li>
   </ul>
   <div class="logout-section">
-    <a href="logout.html" class="logout-link">
+    <a href="../accountManagement/logout.php" class="logout-link">
       <img src="../icon/logout.png" class="nav-icon" />
       <span>Logout</span>
     </a>
@@ -71,7 +68,7 @@
   <button id="toggleShortSidebar">≪</button>
 </aside>
 
-<aside class="main-sidebar-short" id="shortSidebar">
+<aside class="main-sidebar-short" id="shortSidebar" style="display: none;">
   <div class="logo-section">
     <img src="../icon/Logo.png" class="logo" />
   </div>
@@ -82,7 +79,7 @@
       </a>
     </li>
     <li class="nav-item">
-      <a href="../Notes/StickyNotes.php" class="nav-link">
+        <a href="../StickyNotes/StickyNote.php" class="nav-link">
         <img src="../icon/note.jpg" class="nav-icon" />
       </a>
     </li>
@@ -92,7 +89,7 @@
       </a>
     </li>
     <li class="nav-item">
-        <a href="../community/community.php" class="nav-link">
+        <a href="../Community&Peer/community.php" class="nav-link">
         <img src="../icon/community.png" class="nav-icon" />
       </a>
     </li>
@@ -103,13 +100,13 @@
     </li>
   </ul>
   <div class="logout-section">
-    <a href="../accountManagement/logout.php" class="logout-link">
+    <a href="logout.html" class="logout-link">
       <img src="../icon/logout.png" class="nav-icon" />
     </a>
   </div>
   <button id="toggleLongSidebar">≫</button>
 </aside>
-<script src="../js/sidebar.js"></script>
+</body>
 <script>
   document.addEventListener('DOMContentLoaded', function () {
   const toggleShortSidebar = document.getElementById('toggleShortSidebar');
@@ -134,6 +131,19 @@
     shortSidebar.style.display = 'none';
     longSidebar.style.display = 'flex';
     content.style.marginLeft = '200px';
+  });
+});
+
+document.querySelectorAll('.menu-heading').forEach(function(menuHeading) {
+  menuHeading.addEventListener('click', function () {
+    const parent = this.closest('.nav-item');
+    const submenu = parent.querySelector('.submenu');
+
+    if (submenu) {
+      // Toggle submenu visibility
+      const isVisible = submenu.style.display === 'block';
+      submenu.style.display = isVisible ? 'none' : 'block';
+    }
   });
 });
 
