--- a/sidebar/sidebar.html
+++ b/sidebar/sidebar.html
@@ -47,7 +47,7 @@
       </ul>
     </li>
     <li class="nav-item has-submenu expanded">
-      <a href="../Community&Peer/community.php" class="nav-link menu-heading">
+      <a href="../community/community.php" class="nav-link menu-heading">
         <img src="../icon/community.png" class="nav-icon" />
         <span>Community & Peer</span>
       </a>
@@ -89,7 +89,7 @@
       </a>
     </li>
     <li class="nav-item">
-        <a href="../Community&Peer/community.php" class="nav-link">
+        <a href="../community/community.php" class="nav-link">
         <img src="../icon/community.png" class="nav-icon" />
       </a>
     </li>
@@ -100,7 +100,7 @@
     </li>
   </ul>
   <div class="logout-section">
-    <a href="logout.html" class="logout-link">
+    <a href="../accountManagement/logout.php" class="logout-link">
       <img src="../icon/logout.png" class="nav-icon" />
     </a>
   </div>
